...
              activeIcon: Icon(
                Icons.person,
                color: AppTheme().themeApp.colorScheme.primary,
              ),
            ),
            BottomNavigationBarItem(
              key: Key('home_nav_item'),
              icon: Icon(Icons.shopping_bag_outlined),
              label: 'home',
              activeIcon: Icon(
                Icons.shopping_bag,
                color: AppTheme().themeApp.colorScheme.primary,
              ),
            ),
            BottomNavigationBarItem(
              key: Key('cart_nav_item'),
              icon: Icon(Icons.shopping_cart_outlined),
              label: 'Cart',
              activeIcon: Icon(
                Icons.shopping_cart,
                color: AppTheme().themeApp.colorScheme.primary,
              ),
...
