...
                  ),

                  SizedBox(
                    width: double.infinity,
                    child: CustomOutlineButton(
                      icon: Icons.people,
                      text: 'Iniciar con cualquier usuario',
                      onPressed: () async {
                        var response = await ref
                            .read(fakeStoreProvider)
                            .user
                            .getUser('2');
                        response.fold((error) => print(error.message), (user) {
...
