...
            child: Center(
              child: Padding(
                padding: const EdgeInsets.symmetric(horizontal: 10.0),
                child: Scrollbar(
                  controller: _scrollController,
                  child: SingleChildScrollView(
                    key: Key('scroll_products'),

                    controller: _scrollController,
                    child: Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        ...productsState.products.map(
...
